@@ -1,3 +1,8 @@
+2011-09-21  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* Makefile.am:
+	[ 3412033 ] New files from 3313833 missed release tarball
+
 2011-09-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* httpAdapter.c, sfcb.cfg.pre.in, control.c:
